Wordpress/wp-nginx-php.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wprdpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: wp-config
        secret:
          secretName: wp-config
      - name: wordpress-vol
        persistentVolumeClaim:
          claimName: wp-vol-claim
      containers:
      - image: nginx
        name: wp-nginx
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/
        - name: wordpress-vol
          mountPath: /var/www/html/
        ports:
        - containerPort: 80
      - image: php:8.0-fpm
        name: wp-php
        command: ["/bin/bash"]
        args: ["-c", "docker-php-ext-install mysqli gd sockets;php-fpm;"]
        volumeMounts:
        - name: wordpress-vol
          mountPath: /var/www/html/
        - name: wp-config
          mountPath: /var/www/html/wp-config.php
          subPath: wp-config.php
        ports:
        - containerPort: 9000
          name: wp-php
---
apiVersion: v1
kind: Service
metadata:
  name: php-nginx-service
spec:
  selector:
    app: wordpress
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: LoadBalancer
  externalIPs:
    - 192.168.132.143
