Wordpress/wp-nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-nginx
  labels:
    app: wprdpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: wp-config
        secret:
          secretName: wp-config
      - name: wordpress-vol
        persistentVolumeClaim:
          claimName: wp-vol-claim
      nodeSelector:
        vol: wp-data
      containers:
      - image: nginx
        name: wp-nginx
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/
        - name: wordpress-vol
          mountPath: /var/www/html/
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wp-nginx-service
spec:
  selector:
    app: wordpress
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: LoadBalancer
  externalIPs:
#    - 192.168.132.143
# uncomment the ip address line and provide
# externalIP same as master ip
