Wordpress/wp-php.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-php
  labels:
    app: wprdpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        tier: backend
    spec:
      volumes:
      - name: wp-config
        secret:
          secretName: wp-config
      - name: wordpress-vol
        persistentVolumeClaim:
          claimName: wp-vol-claim
      nodeSelector:
        vol: wp-data
      containers:
      - image: php:8.0-fpm
        name: wp-php
        command: ["/bin/bash"]
        args: ["-c", "docker-php-ext-install mysqli gd sockets;php-fpm"]
        volumeMounts:
        - name: wordpress-vol
          mountPath: /var/www/html/
        - name: wp-config
          mountPath: /var/www/html/wp-config.php
          subPath: wp-config.php
        ports:
        - containerPort: 9000
          name: wp-php
---
apiVersion: v1
kind: Service
metadata:
  name: wp-php
  labels:
    app: wordpress
spec:
  ports:
    - port: 9000
  selector:
    app: wordpress
    tier: backend
  clusterIP: None
