Wordpress/wp-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
spec:
  rules:
    - host: wp-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: php-nginx-service
              servicePort: 30000
